<resources>
    <string name="app_name">Bibilia Takatifu</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_main4">Main4Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="newTestament">Agano Jipya</string>
    <string name="oldTestament">Agano La Kale</string>
    <string name="books">Vitabu</string>
    <string name="searchBook">Tafuta kitabu</string>
    <string name="searchInChapter">Tafuta fungu</string>
    <string name="nav_search">Tafuta Fungu</string>
    <string name="nav_bookmarks">Vialamisho</string>
    <string name="nav_favourites">Fungu unazopenda</string>
    <string name="nav_dark_mode">Hali ya giza</string>
    <string name="nav_settings">Mipangilio</string>
    <string name="preferences">Mapendeleo</string>
</resources>
