<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_baseline_search_24px"
        android:title="@string/nav_search" />

    <item
        android:id="@+id/nav_favourites"
        android:icon="@drawable/ic_baseline_favorite_border_24px"
        android:title="@string/nav_favourites" />

    <item
        android:id="@+id/nav_bookmarks"
        android:icon="@drawable/ic_baseline_bookmarks_24px"
        android:title="@string/nav_bookmarks" />


    <item android:title="@string/preferences">
        <menu>
            <item
                android:id="@+id/nav_darkMode"
                android:icon="@drawable/ic_toggle_darktheme"
                android:title="@string/nav_dark_mode" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/nav_settings" />
        </menu>
    </item>

</menu>
